# csi-vectorization-grouping

./: CMakeLists.txt  README.md  csv_sender.cpp  main.cpp
data/: synthetic_ipc.csv
extras/: message_queue_deadlock_demo.cpp
include/: IPCManager.hpp  UIUpdater.hpp  WorkerPool.hpp  concurrent_hashmap.h  ipc_channel.h  logger.h  message.h  message_queue.h  vectorizer.h
src/: ipc_channel.cpp  vectorizer.cpp
